2003-02-08  Pascal Georges <pascal.georges1@free.fr>
	* src/boards/read_colors.c : fixed a bug when the ENTER key is repeatdly
  pressed : the board_finished(BOARD_FINISHED_TOOMANYERRORS); got called once
  per key press, making too many pictures to be displayed. This bug may occur in other
  boards ...
  
2003-02-05  Bruno Coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: added po stats (python tool taken from dia)
	* boards/machpuzzle.xml.in: removed until it does something usefull
	* po-checktrans: a nive tool from Cyrille Chepelov to get stats on po files
	* po-checktrans.py: a nive tool from Cyrille Chepelov to get stats on po files

2003-02-04  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/config.c: Added "tr" (Turkish) to the languages' list.

2003-02-03  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "tr" (Turkish) to the languages' list.

2003-02-02  bruno  <bruno.coudoin@free.fr>

	* src/boards/enumerate.c: (item_event): Now object cannot be dropped outside the canvas
	* src/gcompris/gcompris.c: (board_widget_key_press_callback): removed old comment
	* TESTS: removed the comment on enumerate

2003-02-01  Pascal Georges <pascal.georges1@free.fr>
	*	src/gcompris/soundutil.c : as train.wav could not be played (/dev/dsp
  busy error), modified it to be played as an ogg file

2003-01-29  Pascal Georges <pascal.georges1@free.fr>
	* src/boards/missingletter.c : added more questions (now 36)
	* src/boards/imageid.c : added more questions (not enough yet ...)

2003-01-28  Pascal Georges <pascal.georges1@free.fr>
	* src/gcompris/gcompris.c : fixed sound init (when music is off, the fx sound was also off ...)
	* src/boards/missingletter.c : added more questions (30 instead of 8)

2003-01-27  bruno  <bruno.coudoin@free.fr>

	* boards/boardicons/gletters.png: better icon
	* boards/boardicons/wordsgame.png: better icon
	* boards/wordsgame/wordslevelmax.fr: re-added removed words